# todo-app

./: .gitignore  README.md  build.sh  docker-compose.yml  pyproject.toml  test.sh
.github/workflows/: tests.yml
backend/: Dockerfile  app.py  requirements.txt
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  style.css
tests/: test_api.py
