[tool.poetry]
name = "todo-backend"
version = "0.1.0"
description = "Flask todo API pour l'app TODO"
authors = ["todo-app <dev@example.com>"]
packages = [{ include = "backend" }]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.0"
flask-cors = "^4.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

